make animation that MysBox will change location when mario touch

--- a/05-SceneManager/05-SceneManager.vcxproj.filters
+++ b/05-SceneManager/05-SceneManager.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="KoopaTroopa.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mysbox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="KoopaTroopa.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mysbox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
