--- a/05-SceneManager/05-SceneManager.vcxproj.filters
+++ b/05-SceneManager/05-SceneManager.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="Mysbox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Venus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -156,6 +159,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Mysbox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Venus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
