--- a/05-SceneManager/05-SceneManager.vcxproj.filters
+++ b/05-SceneManager/05-SceneManager.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="Venus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="eatplant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -162,6 +165,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Venus.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="eatplant.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
